<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nishanth.currencyconverter.MainActivity"
    android:layout_gravity="center_horizontal">

    <RadioGroup
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_below="@+id/textViewConvert"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/radiousd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/radioButtonUSD"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/radioGBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButtonUSD"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/radioButtonGBP"
            android:layout_weight="1" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextDecimal1"
        android:hint="@string/input_number"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup1"
        android:padding="5dp"
        android:elevation="0dp"
        android:layout_below="@+id/editTextDecimal1"
        android:layout_centerHorizontal="true"
        >

        <RadioButton
            android:text="@string/radioAUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/radioButtonAUD"
            android:layout_below="@+id/editTextDecimal1"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/radioCAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButtonAUD"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/radioButtonCAD"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioINR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioButtonCAD"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/radioButtonINR"
            android:layout_weight="1" />

    </RadioGroup>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonconvert"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewDecimal1"
        android:textSize="24sp" />

    <Button
        android:text="@string/bt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClear"
        android:layout_below="@+id/textViewDecimal1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="onClear"/>

    <TextView
        android:text="@string/bt_convertto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/textViewConvert"
        android:elevation="0dp"
        android:layout_below="@+id/radioGroup1"
        android:layout_alignRight="@+id/radioGroup2"
        android:layout_alignEnd="@+id/radioGroup2" />

    <Button
        android:text="@string/bt_cnv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonconvert"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/radioGroup2"
        android:layout_alignLeft="@+id/buttonClear"
        android:layout_alignStart="@+id/buttonClear" />

</RelativeLayout>
